--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -6,13 +6,13 @@
 
 version: '2.4'
 services:
-  tensorflow-jupyter-demo-app:
+  jupyter-notebook-with-gpu:
     environment:
       - TF_FORCE_GPU_ALLOW_GROWTH=true # needed for MIG mode to work on MIG-capable GPUs
 
     image: tensorflow/tensorflow:2.14.0-gpu-jupyter
 
-    command: '/bin/bash -c "jupyter notebook --notebook-dir=/tf --ip 0.0.0.0 --no-browser --allow-root --NotebookApp.base_url=/tensorflow-jupyter-demo-app --NotebookApp.token=\"\" --NotebookApp.password=\"\" > /tf/publish/jupyter-console.log 2>&1"'
+    command: '/bin/bash -c "jupyter notebook --notebook-dir=/tf --ip 0.0.0.0 --no-browser --allow-root --NotebookApp.allow_origin=* --NotebookApp.base_url=/jupyter-notebook-with-gpu --NotebookApp.token=\"\" --NotebookApp.password=\"\" > /tf/publish/jupyter-console.log 2>&1"'
 
     runtime: iedge
 
@@ -21,7 +21,7 @@ services:
         nvidia.com/gpu: 1
  
     labels:
-      com_mwp_conf_nginx: '[{"name":"tensorflow-jupyter-demo-app","protocol":"HTTP","port":"8888","headers":"","rewriteTarget":"/tensorflow-jupyter-demo-app"}]'
+      com_mwp_conf_nginx: '[{"name":"jupyter-notebook-with-gpu","protocol":"HTTP","port":"8888","headers":"","rewriteTarget":"/jupyter-notebook-with-gpu"}]'
 
     mem_limit: 8192mb
 
