--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -1,4 +1,4 @@
-# Copyright (c) 2024 Siemens AG
+# Copyright (c) Siemens 2024
 # This file is subject to the terms and conditions of the MIT License.
 # See LICENSE file(s) in the top-level directory.
 
